<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">My Nanodegree Apps!</string>

    <string name="app1name">SPOTIFY STREAMER</string>
    <string name="app2name">SCORES APP</string>
    <string name="app3name">LIBRARY APP</string>
    <string name="app4name">BUILD IT BIGGER</string>
    <string name="app5name">XYZ READER</string>
    <string name="app6name">CAPSTONE: MY OWN APP</string>
</resources>
